added carts and relationships

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
         <li><a href="www..../faq">Questions</a></li>
         <li><a href="www..../news">News</a></li>
         <li><a href="www..../contact">Contact</a></li>
+        <div class="datetime">
+          <li><%= print_date %></li>
+        </div>
       </ul>
     </div>
     <div id="main">
