--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,6 +51,10 @@
     width: 13em;
     background: #141;
 
+    .datetime {
+      color: white;
+    }
+
     ul {
       padding: 0;
       li {
